--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </style>
 </head>
 <body>
-    <h1>Multiplication Table Generator</h1>
-    <button onclick="generateTable()">Generate New Table</button>
-    <button onclick="window.print()">Print Table</button>
+    <h1>Szorzotábla gyakorlás</h1>
+    <button onclick="generateTable()">Generálj feladatokat</button>
+    <button onclick="window.print()">Nyomtatás</button>
     <table id="multiplicationTable"></table>
     
     <script>
