--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multiplication Table Generator</title>
+    <title>Szorzótábla gyakorlás</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-    <h1>Szorzotábla gyakorlás</h1>
+    <h1>Szorzótábla gyakorlás</h1>
     <button onclick="generateTable()">Generálj feladatokat</button>
     <button onclick="window.print()">Nyomtatás</button>
     <table id="multiplicationTable"></table>
